--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -151,3 +151,18 @@ a:hover, a:visited, a:active {
 .new {
 	color:rgb(116, 116, 116);
 }
+
+
+body::-webkit-scrollbar {
+	width: 12px;               /* width of the entire scrollbar */
+  }
+  
+  body::-webkit-scrollbar-track {
+	background: black;        /* color of the tracking area */
+  }
+  
+  body::-webkit-scrollbar-thumb {
+	background-color: black;    /* color of the scroll thumb */
+	border-radius: 20px;       /* roundness of the scroll thumb */
+	border: 3px solid black;  /* creates padding around scroll thumb */
+  }
